--- a/Typescript + sass + nunjucks + browsersync/package.json
+++ b/Typescript + sass + nunjucks + browsersync/package.json
@@ -28,13 +28,13 @@
     "del": "^3.0.0",
     "eslint": "^5.6.0",
     "eslint-plugin-typescript": "^0.12.0",
+    "favicons": "^5.2.0",
     "gulp": "^4.0.0",
     "gulp-autoprefixer": "^6.0.0",
     "gulp-cache": "^1.0.2",
     "gulp-cheerio": "^0.6.3",
     "gulp-clean-css": "^3.10.0",
     "gulp-consolidate": "^0.2.0",
-    "gulp-csscomb": "^3.0.8",
     "gulp-front-matter": "^1.3.0",
     "gulp-group-css-media-queries": "^1.2.2",
     "gulp-htmlmin": "^5.0.1",
