Update eslint & add sass autofixer

--- a/Typescript + sass + nunjucks + browsersync/package.json
+++ b/Typescript + sass + nunjucks + browsersync/package.json
@@ -9,11 +9,12 @@
     "browsersync": "browser-sync start --config bs-config.js",
     "build": "gulp concurrently:build",
     "clean": "gulp clean",
-    "dev": "gulp concurrently:dev",
+    "start": "gulp concurrently:dev",
     "gulp": "gulp",
     "gulp-build": "gulp build",
     "webpack": "webpack --config webpack.dev.js",
-    "webpack-build": "webpack --config webpack.prod.js"
+    "webpack-build": "webpack --config webpack.prod.js",
+    "sass:fix": "sass-lint-auto-fix"
   },
   "browserslist": [
     ">0.25%",
@@ -26,8 +27,14 @@
     "cheerio": "^1.0.0-rc.2",
     "concurrently": "^4.0.1",
     "del": "^3.0.0",
-    "eslint": "^5.6.0",
+    "eslint": "^5.9.0",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-plugin-array-func": "^3.1.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-promise": "^4.0.1",
+    "eslint-plugin-sort-destructure-keys": "^1.1.0",
     "eslint-plugin-typescript": "^0.12.0",
+    "eslint-plugin-unicorn": "^6.0.1",
     "favicons": "^5.2.0",
     "gulp": "^4.0.0",
     "gulp-autoprefixer": "^6.0.0",
@@ -58,6 +65,7 @@
     "prettier": "^1.14.3",
     "require-dir": "^1.0.0",
     "sass-lint": "^1.12.1",
+    "sass-lint-auto-fix": "^0.15.0",
     "through2": "^2.0.3",
     "ts-loader": "^5.1.1",
     "typescript": "^3.0.3",
